<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:orientation="horizontal">

    <ViewAnimator
    android:id="@+id/viewAnimator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateFirstView="true"
    android:inAnimation="@android:anim/fade_in"
    android:outAnimation="@android:anim/fade_out"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/uno"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/botonlog"
                style="@style/Botones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded"
                android:onClick="ingresar"
                android:text="@string/botoningresar"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95"></Button>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/botonlog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@drawable/luwingpng" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Luwing"
                android:textColor="#01579B"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".025" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BIENVENIDO AL SERVICIO DE LUWING"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/botonlog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dos"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/continuar"
                style="@style/Botones"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_rounded"
                android:onClick="continuar"
                android:text="@string/botoncontinuar"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                app:layout_constraintVertical_bias="0.05" />


            <Button
                android:id="@+id/crearCuenta"
                style="@style/Botones"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:background="@drawable/button_rounded"
                android:onClick="crearcuenta"
                android:shadowColor="#57FFFFFF"
                android:text="@string/botoncrearcuenta"
                android:textColor="@color/colorbotontxt"
                android:textColorHighlight="@color/colorSecundario"
                android:textColorLink="@color/colorbotonfondo"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continuar"
                app:layout_constraintVertical_bias="0.05" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="322dp"
                android:layout_height="55dp"
                android:background="@drawable/text_backgraunda"
                android:drawableStart="@drawable/password_focused_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumero"
                app:layout_constraintVertical_bias="0.0500000" />

            <EditText
                android:id="@+id/txtNumero"
                android:layout_width="322dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_backgraunda"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Número telefónico"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/luwingpng"
                app:layout_constraintBottom_toTopOf="@+id/txtNumero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tres"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/regresar2"
                style="@style/Botones"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/button_rounded"
                android:onClick="regresar2"
                android:text="@string/botonregresar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/guardar"
                style="@style/Botones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_rounded"
                android:onClick="guardar"
                android:text="@string/botonguardar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtRecrearPassword" />


            <EditText
                android:id="@+id/txtRecrearPassword"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/text_backgraunda"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCrearPassword" />


            <EditText
                android:id="@+id/txtCrearNumero"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/text_backgraunda"
                android:ems="10"
                android:hint="Número de teléfono"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="8dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtIngresarUsuario" />

            <EditText
                android:id="@+id/txtCrearPassword"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/text_backgraunda"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCrearNumero" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/luwingpng"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guardar"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtIngresarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CREACIÓN DE CUENTA"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewAnimator>

</LinearLayout>